# kvmux

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: README.md  loadgen.py  run_overhead.sh
bench/results/wsl2-preliminary/: RESULTS.md  direct_rate100_20260613T000732Z.csv  direct_rate100_20260613T002514Z.csv  direct_rate200_20260613T002514Z.csv  direct_rate20_20260613T000732Z.csv  direct_rate20_20260613T002514Z.csv  direct_rate50_20260613T000732Z.csv  direct_rate50_20260613T002514Z.csv  environment_preliminary_wsl2.json  flamegraph_gateway_preliminary_wsl2.folded  gateway_rate100_20260613T000732Z.csv  gateway_rate100_20260613T002514Z.csv  gateway_rate200_20260613T002514Z.csv  gateway_rate20_20260613T000732Z.csv  gateway_rate20_20260613T002514Z.csv  gateway_rate50_20260613T000732Z.csv  gateway_rate50_20260613T002514Z.csv  metrics_20260613T000732Z.prom  metrics_20260613T002514Z.prom  overhead_summary_preliminary_wsl2.txt
config/: kvmux.example.toml  ollama-quickstart.toml
docs/: demo.txt
src/: config.cpp  config.hpp  main.cpp
src/admission/: controller.cpp  controller.hpp
src/health/: checker.cpp  checker.hpp  circuit_breaker.cpp  circuit_breaker.hpp
src/metrics/: registry.cpp  registry.hpp
src/openai/: errors.cpp  errors.hpp  types.hpp
src/routing/: policy.hpp  prefix_affinity.cpp  prefix_affinity.hpp  round_robin.cpp  round_robin.hpp
src/server/: gateway.cpp  gateway.hpp  listener.cpp  listener.hpp  sse_writer.cpp  sse_writer.hpp
src/upstream/: client.cpp  client.hpp  sse_parser.cpp  sse_parser.hpp
tests/: CMakeLists.txt  promtool_check.cmake
tests/fixtures/: README.md  llamacpp_chat_stream.sse  ollama_chat_stream.sse  ollama_usage_stream.sse  vllm_chat_stream.synthetic.sse
tests/integration/: kvmux_mock.toml  kvmux_ollama.toml  test_multibackend.cpp  test_proxy.cpp  test_routing.cpp
tests/mock_backend/: mock_server.py
tests/tools/: dump_metrics.cpp
tests/unit/: test_admission.cpp  test_circuit_breaker.cpp  test_config.cpp  test_errors.cpp  test_health.cpp  test_metrics.cpp  test_openai_types.cpp  test_prefix_affinity.cpp  test_round_robin.cpp  test_smoke.cpp  test_sse_fixtures.cpp  test_sse_parser.cpp
